--- a/style.css
+++ b/style.css
@@ -245,6 +245,7 @@ footer {
     background-color: rgba(57, 33, 33, 0.33);
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-bottom: 0px;
 }
 
 footer p {
